[project]
name = "tpcc-tester"
version = "0.1.0"
description = "A tpcc-tester tool for the National Collegiate Computer System Capability Competition - Database Management System Design Competition"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
]

[project.scripts]
tpcc-tester = "tpcc.main:main"
